syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.notification.config.service.v1;

import "org/hypertrace/notification/config/service/v1/notification_rule.proto";

service NotificationRuleConfigService {
  rpc CreateNotificationRule(CreateNotificationRuleRequest) returns (CreateNotificationRuleResponse) {}
  rpc UpdateNotificationRule(UpdateNotificationRuleRequest) returns (UpdateNotificationRuleResponse) {}
  rpc GetAllNotificationRules(GetAllNotificationRulesRequest) returns (GetAllNotificationRulesResponse) {}
  rpc DeleteNotificationRule(DeleteNotificationRuleRequest) returns (DeleteNotificationRuleResponse) {}
  rpc GetNotificationRule(GetNotificationRuleByIdRequest) returns (GetNotificationRuleByIdResponse) {}
}

message CreateNotificationRuleRequest {
  NotificationRuleMutableData notification_rule_mutable_data = 1;
}

message CreateNotificationRuleResponse {
  NotificationRule notification_rule = 1;
}

message UpdateNotificationRuleRequest {
  string id = 1;
  NotificationRuleMutableData notification_rule_mutable_data = 2;
}

message UpdateNotificationRuleResponse {
  NotificationRule notification_rule = 1;
}

message GetAllNotificationRulesRequest {}

message GetAllNotificationRulesResponse {
  repeated NotificationRule notification_rules = 1;
}

message DeleteNotificationRuleRequest {
  string notification_rule_id = 1;
}

message DeleteNotificationRuleResponse {}

message GetNotificationRuleByIdRequest {
  string notification_rule_id = 1;
}

message GetNotificationRuleByIdResponse {
  NotificationRule notification_rule = 1;
}
